test/interaction/Issue7650.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals*" "?0 : Bool " nil)
((last . 1) . (agda2-goals-action '(0)))
(agda2-info-action "*Error*" "Issue7650.agda:6.11-17: error: [Interaction.CaseSplitError] Cannot split on variable eq, because it is an equality proof bound by a with-abstraction when checking that the expression ? has type Bool" nil)
((last . 3) . (agda2-maybe-goto '("Issue7650.agda" . 109)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
